force-app/main/default/objects/ssot__MarketJourneyActivity__dlm/ssot__MarketJourneyActivity__dlm.object-meta.xml
<CustomObject>
    <label>Market Journey Activity</label>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isSqlDmo>false</isSqlDmo>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Market Journey Activity</labelOverride>
        <masterLabel>Market Journey Activity</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
        <referenceEntityGroup>Business Process</referenceEntityGroup>
        <referenceEntityName>MarketJourneyActivity</referenceEntityName>
        <referenceEntitySubjectArea>Business Process</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>