force-app/main/default/objects/ssot__MarketJourneyActivity__dlm/fields/KQ_MarketJourneyId__c.field-meta.xml
<CustomField>
    <fullName>KQ_MarketJourneyId__c</fullName>
    <label>Key Qualifier Market Journey Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Market Journey Id</labelOverride>
        <masterLabel>Key Qualifier Market Journey Id</masterLabel>
        <refAttrDeveloperName>KQ_MarketJourneyId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>