force-app/main/default/objects/ssot__MarketJourneyActivity__dlm/fields/rel_1737485343691_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1737485343691_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ssot_MarketJourneyActivity_MarketJou_rel</label>
    <referenceTo>MarketJourney__dlm</referenceTo>
    <relationshipLabel>ssot_MarketJourneyActivity_MarketJou_rel</relationshipLabel>
    <relationshipName>rel_1737485343691_end</relationshipName>
    <type>Lookup</type>
</CustomField>