force-app/main/default/objects/ssot__MarketJourneyActivity__dlm/fields/ssot__TypeName__c.field-meta.xml
<CustomField>
    <fullName>ssot__TypeName__c</fullName>
    <label>Type Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Type Name</labelOverride>
        <masterLabel>Type Name</masterLabel>
        <refAttrDeveloperName>TypeName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>